--- a/threejs/package.json
+++ b/threejs/package.json
@@ -19,7 +19,6 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-tilt": "^1.0.2",
-    "react-vertical-timeline": "^0.2.0",
     "three": "^0.153.0"
   },
   "devDependencies": {
@@ -32,6 +31,8 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.4.24",
+    "react-vertical-timeline": "^0.2.0",
+    "react-vertical-timeline-component": "^3.6.0",
     "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
